# mdow

./: .gitignore  Cargo.toml  Dockerfile  README.md  _config.yml  fly.toml  litefs.yml
.github/workflows/: fly-deploy.yml
src/: database.rs  handlers.rs  main.rs  models.rs  utils.rs  views.rs
ui/: app.maud
