[package]
name = "mdow"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.6"
maud = "0.25" 
tokio = { version = "1.0", features = ["full"] }
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "chrono"] }
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1.0"
qrcode = "0.12"
ammonia = "4"

